--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/akshay.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
