--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "src/akshay.css"
+              "src/global.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
